RESOLVED FIXED85096
[Texmap] Leaves demo: wrong geometry when opacity animation kicks in
https://bugs.webkit.org/show_bug.cgi?id=85096
Summary [Texmap] Leaves demo: wrong geometry when opacity animation kicks in
Noam Rosenthal
Reported 2012-04-27 13:38:07 PDT
[Texmap] Leaves demo: wrong geometry when opacity animation kicks in
Attachments
Patch (2.89 KB, patch)
2012-04-27 13:41 PDT, Noam Rosenthal
no flags
Patch (3.57 KB, patch)
2012-04-27 15:32 PDT, Noam Rosenthal
no flags
Noam Rosenthal
Comment 1 2012-04-27 13:41:57 PDT
Jocelyn Turcotte
Comment 2 2012-04-27 14:04:46 PDT
Comment on attachment 139262 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=139262&action=review > Source/WebCore/ChangeLog:11 > + intermediate surfaces for preserves-3d. Also, we should multiply the compensation > + transform (options.transform) before we multiply the current item's transform, otherwise > + the transform-origin is incorrect. The order of option.transform vs. m_transform.combined() didn't change in the code, only the order of options.offset changed, so maybe the changelog should be updated? > Source/WebCore/platform/graphics/texmap/TextureMapperLayer.cpp:-153 > - TransformationMatrix(options.transform) > - .multiply(m_transform.combined()) > - .translate(options.offset.width(), options.offset.height()); The same order is present at the end of paintRecursive, should it be updated as well?
Noam Rosenthal
Comment 3 2012-04-27 15:32:11 PDT
WebKit Review Bot
Comment 4 2012-04-29 08:19:30 PDT
Comment on attachment 139291 [details] Patch Clearing flags on attachment: 139291 Committed r115596: <http://trac.webkit.org/changeset/115596>
WebKit Review Bot
Comment 5 2012-04-29 08:19:35 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.