[Texmap] Leaves demo: wrong geometry when opacity animation kicks in https://bugs.webkit.org/show_bug.cgi?id=85096

Reviewed by Kenneth Rohde Christiansen.

We should use combined() instead of combinedForChildren() since we don't allow
intermediate surfaces for preserves-3d. Also, we should apply the offset before
multiplying the transforms, otherwise the transform-origin is incorrect.

Covered by existing compositing tests.

* platform/graphics/texmap/TextureMapperLayer.cpp:
(WebCore::TextureMapperLayer::paintSelf):
(WebCore::TextureMapperLayer::paintRecursive):


Canonical link: https://commits.webkit.org/102716@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115596 268f45cc-cd09-0410-ab3c-d52691b4dbfc